# devops-mindset-app

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  README.md  docker-compose.yaml  mise.toml  pyproject.toml  release-please-config.json  start-container.sh  testfile.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  e2e-tests.yaml  frontend-tests.yaml  release-please.yaml  release.yaml  update-gitops.yaml
kubernetes/: deploy-to-k3d.sh  e2e_test.py  minimal_phase1.py
scripts/: build_modern_containers  docker_compose_manager  extendet_setup  run_tests  safe_commit  setup  setup-Argocd  setup-argocd-complete.sh  setup-commitizen.sh  setup-flux-gitops.sh  setup-minimal-cluster.sh  setup_backend  setup_frontend  setup_git  setup_project  start_backend  start_frontend  start_modern_local
src/: docker-compose.yml
src/backend/: .coverage  CHANGELOG.md  Dockerfile  README.md  config.py  coverage.xml  main.py  pyproject.toml
src/backend/data/: sessions.csv
src/backend/src/backend/: __init__.py  main.py  models.py  storage.py
src/backend/tests/: test_config.py  test_main.py  test_storage.py
src/devops_study_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/frontend/: CHANGELOG.md  Dockerfile  README.md  __init__.py  main.py  pyproject.toml
src/frontend/src/frontend/: __init__.py  main.py
src/frontend/src/frontend/templates/: base.html  index.html
src/frontend/templates/: base.html  index.html
