[project]
name = "devops-study-tracker"
version = "0.1.0"
description = "Full-Stack DevOps Study Time Tracker"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "flask>=3.0.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "commitizen>=3.13.0"          # ✅ NEU: In main dependencies
]

[project.scripts]
backend = "src.backend.main:main"
frontend = "src.frontend.main:main"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "W", "F", "I", "B"]