[project]
name = "devops-study-tracker-backend"
version = "0.1.0"
description = "Backend API for tracking study time for DevOps certifications"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pydantic>=2.5.0"
]

[project.scripts]
study-tracker-api = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
