[project]
name = "devops-study-tracker-frontend"
version = "0.1.0"
description = "Frontend for DevOps Study Tracker application"
requires-python = ">=3.12"

dependencies = [
    "flask>=3.1.0",
    "requests>=2.32.3",
    "jinja2>=3.1.0"
]

[project.scripts]
study-tracker-frontend = "frontend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frontend"]
