[project]
name = "devops-study-tracker-frontend"
version = "0.3.0"
description = "Frontend for DevOps Study Tracker application"
requires-python = ">=3.12"

dependencies = [
    "flask>=3.1.0",
    "requests>=2.32.3",
    "jinja2>=3.1.0"
]

[project.scripts]
study-tracker-frontend = "frontend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frontend"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "responses>=0.25.7",
    "ruff>=0.11.13",
]
